--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,11 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.byte-buddy-1.10.7.jar=/Users/stormking/Downloads/byte-buddy-1.10.7.jar
+file.reference.java-json.jar=/Users/stormking/Downloads/java-json.jar
+file.reference.mockito-core-3.2.4.jar=/Users/stormking/Downloads/mockito-core-3.2.4.jar
 file.reference.mysql-connector-java-8.0.16.jar=/Users/stormking/Downloads/mysql-connector-java-8.0.16/mysql-connector-java-8.0.16.jar
+file.reference.objenesis-3.1.jar=/Users/stormking/Downloads/objenesis-3.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,8 +42,12 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${libs.MySQLDriver.classpath}:\
     ${file.reference.mysql-connector-java-8.0.16.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${file.reference.java-json.jar}:\
+    ${file.reference.mockito-core-3.2.4.jar}:\
+    ${file.reference.byte-buddy-1.10.7.jar}:\
+    ${file.reference.objenesis-3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -50,7 +58,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
